--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 h1 {
     display: flex;
     justify-content: center;
+    
 }
 .Logo {
-    font-size: 35px;
+    color: white;
+    font-size: 48px;
+    padding-left: 200px;
+    padding-right: 100px;
 }
 .header-links {
     list-style-type: none;
@@ -11,57 +15,64 @@ h1 {
     margin-left: 20px;
     padding: 0;
     margin-left: auto;
+    margin-right: 500px;
+    
 }
 
 .header-links li {
+    font-size: 18px;
+    color: white;
     margin-right: 10px;
     font-size: 15px;
 }
 
-h2 {
+.top {
+    
     display: flex;
-    flex-flow: wrap;
+    flex-direction: wrap;
     justify-content: center;
     align-items: center;
+    height: 800px;
+    width: auto;
+    color: white;
 }
 
-title {
-    font-size: xx-large;
+.text-container {
+    padding-left: 200px;
+    padding-right: 100px;
+  
 }
 
-.text-container{
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    
+.picture-1 {
+    height: 600px;
+    margin-right: 500px;
+}
+body {
+    background-color: #1f2937;
 }
 
-.large-text {
-    font-size: x-large;
-}
-
-.small-text {
-    font-size: small;
-
-}
-
-
-p {
-    display: flex;
-    justify-content: flex-start;
-}
 b {
+    background-color: #008CBA;
+    border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.middle-1 {
+    background-color: white;
+}
+
+.center-images {
     display: flex;
-    justify-content: flex-start;
+    size-adjust: 50px;
+    justify-content: space-between;
+}
+
+.center-images li {
+    display: flex;
     
-}
-.pic-container {
-    display: flex;
-    align-content: flex-end;
-}
-.picture-1{
-    width: 300px;
-    height: auto;
-    margin-left: 100px; 
-   
 }
